mobile and reusable slider

--- a/src/Component/Header/Header.scss
+++ b/src/Component/Header/Header.scss
@@ -1,7 +1,8 @@
 header {
   min-height: 100vh;
   position: relative;
-
+  margin-bottom: 150px;
+  padding: 50px;
   .header__text {
     max-width: 515px;
     text-align: left;
